[package]
name = "gymnarium"
version = "0.1.0"

description = "The collecting crate for the gymnarium libraries."
keywords = ["gym", "reinforcement", "learning"]

repository = "https://github.com/tiquthon/gymnarium"
authors = ["Thimo Neumann <tiquthon@gmail.com>"]

edition = "2018"
license = "MIT"

[dependencies]
bincode = "1.3.1"
# gymnarium_agents_q_learning = { path = "../gymnarium_agents_q_learning" }
gymnarium_agents_random = { path = "../gymnarium_agents_random" }
gymnarium_base = { path = "../gymnarium_base" }
gymnarium_visualisers_base = { path = "../gymnarium_visualisers_base" }
gymnarium_visualisers_piston = { path = "../gymnarium_visualisers_piston" }
gymnarium_environments_gym = { path = "../gymnarium_environments_gym" }
gymnarium_environments_tiquthon = { path = "../gymnarium_environments_tiquthon" }
ron = "0.6.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
